merged in branch IdentifiableElementIndex
git-svn-id: https://korpling.german.hu-berlin.de/svn/saltnpepper/salt/trunk@7067 47085195-c50e-4317-8f43-7cb808db0f00